Added updateing a users subscription  to the project

--- a/SystemDesign/code/Backend/templates/home.html
+++ b/SystemDesign/code/Backend/templates/home.html
@@ -8,6 +8,12 @@
         <h1>This is the home page</h1>
 
         <a href="logout">logout</a>
+        
+        <form action="updateSub" method="post">
+            <input type="submit" value="Submit">
+
+
+        </form>
 
     </body>
 
