--- a/SystemDesign/code/Backend/templates/index.html
+++ b/SystemDesign/code/Backend/templates/index.html
@@ -15,15 +15,26 @@
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
       <a id="logo-container" href="http://www.nasa.gov" class="brand-logo"><img src="{% static 'images/nasa_logo0.png' %}" alt="NASA Logo"></a>
-	  <ul class="right hide-on-med-and-down">
+
+
+
+
+        {% if user.is_authenticated %}
+        <ul class="right hide-on-med-and-down">
         <li><a href="logout">Logout</a></li>
       </ul>
+        {% endif %}
+
       <ul class="right hide-on-med-and-down">
-        <li><a href="register.html">Register</a></li>
+        <li><a href="register">Register</a></li>
       </ul>
+
+        {% if user.is_authenticated == False %}
 	  <ul class="right hide-on-med-and-down">
-        <li><a href="login.html">Login</a></li>
+        <li><a href="login">Login</a></li>
       </ul>
+        {% endif %}
+
 	  <ul class="right hide-on-med-and-down">
         <li><a href="#contact">Contact Us</a></li>
       </ul>
