--- a/SystemDesign/code/Backend/templates/login.html
+++ b/SystemDesign/code/Backend/templates/login.html
@@ -16,13 +16,20 @@
     <div class="nav-wrapper container">
       <a id="logo-container" href="http://www.nasa.gov" class="brand-logo"><img src="{% static 'images/nasa_logo0.png' %}" alt="NASA Logo"></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Register</a></li>
+        <li><a href="register">Register</a></li>
       </ul>
+
+        {% if user.is_authenticated == False %}
+	  <ul class="right hide-on-med-and-down">
+        <li><a href="login">Login</a></li>
+      </ul>
+        {% endif %}
+
 	   <ul class="right hide-on-med-and-down">
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="home#contact">Contact Us</a></li>
       </ul>
 	  <ul class="right hide-on-med-and-down">
-        <li><a href="#">Data Access</a></li>
+        <li><a href="home#data">Data Access</a></li>
       </ul>
       <ul class="right hide-on-med-and-down">
         <li><a href="home">Home</a></li>
@@ -49,7 +56,7 @@
 			  <form method="post">
                 {% csrf_token %}
 				{{ form.as_p }}
-				<button type="submit">Login</button>
+				<button class="btn-large waves-effect waves-light teal lighten-1" type="submit">Login</button>
 			  </form>
 		{% endblock %}
           
@@ -66,7 +73,7 @@
   </div>
 
 
-  
+  <a href="connect"></a>
   <footer class="page-footer teal">
     <div class="container">
       <div class="row">
