--- a/SystemDesign/code/Backend/templates/index.html
+++ b/SystemDesign/code/Backend/templates/index.html
@@ -39,6 +39,7 @@
 	  <ul class="right hide-on-med-and-down">
         <li><a href="#contact">Contact Us</a></li>
       </ul>
+
 	  <ul class="right hide-on-med-and-down">
         <li><a href="#data">Data Access</a></li>
       </ul>
@@ -217,7 +218,7 @@
                       <a width="" href="#modal1" id="download-button2" class="btn-large modal-trigger waves-effect waves-light teal lighten-1">GET DATA</a>
                     </div>
                     <div  class="col s4">
-                      <a class="btn-large waves-effect waves-light teal lighten-1" onclick="Materialize.toast('You need to licence to download 3D Data', 10000)">GET DATA</a>
+                      <a class="btn-large waves-effect waves-light teal lighten-1" onclick="Materialize.toast('You need contact us in order to get a 3D Data licence', 10000)">GET DATA</a>
                     </div>
                     <div  class="col s4">
                       <a href="#modal3" class="btn-large modal-trigger waves-effect waves-light teal lighten-1">GET DATA</a>
