Added function that will redirect if the files have been made

--- a/SystemDesign/code/Backend/templates/index.html
+++ b/SystemDesign/code/Backend/templates/index.html
@@ -173,7 +173,7 @@
 
                     <div class="col s6">
                         {% for file in dataFiles  %}
-                            <a href="media/{{file.file}}" class="btn waves-effect waves-light teal lighten-1">{{file.name}} </a>
+                        <h6><a href="media/{{file.file}}">{{file.name}} </a></h6>
                         {% endfor %}
                     </div>
                 </div>
@@ -187,15 +187,15 @@
                 <div class="modal-content">
                   <h4>3D Data</h4>
 
-                    <div class="col s6">
+                    <div class="col s6c">
                         {% for file in figFiles  %}
-                            <a href="media/{{file.file}}" class="btn waves-effect waves-light teal lighten-1">{{file.name}} </a>
+                        <h6><a href="media/{{file.file}}">{{file.name}} </a></h6>
                         {% endfor %}
 
                         <br/><br/>
 
                         {% for file in speFiles  %}
-                            <a href="media/{{file.file}}" class="btn waves-effect waves-light teal lighten-1">{{file.name}} </a>
+                        <h6><a href="media/{{file.file}}">{{file.name}} </a></h6>
                         {% endfor %}
                     </div>
                 </div>
@@ -210,7 +210,7 @@
 
                     <div class="col s6">
                         {% for file in crossFiles  %}
-                            <a href="media/{{file.file}}" class="btn waves-effect waves-light teal lighten-1">{{file.name}} </a>
+                        <h6><a href="media/{{file.file}}">{{file.name}} </a></h6>
                         {% endfor %}
                     </div>
                 </div>
@@ -240,7 +240,7 @@
 
                     <div class="col s6">
                         {% for file in dataFiles  %}
-                            <a href="media/{{file.file}}" class="btn waves-effect waves-light teal lighten-1">{{file.name}} </a>
+                        <h6><a href="media/{{file.file}}">{{file.name}} </a></h6>
                         {% endfor %}
                     </div>
                 </div>
@@ -257,7 +257,7 @@
 
                     <div class="col s6">
                         {% for file in crossFiles  %}
-                            <a href="media/{{file.file}}" class="btn waves-effect waves-light teal lighten-1">{{file.name}} </a>
+                        <h6><a href="media/{{file.file}}">{{file.name}} </a></h6>
                         {% endfor %}
                     </div>
                 </div>
